--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <ul class="nav-list">
                 <li>
                     <a class="nav1" href="index.html"><i class='fas fa-home'></i></a>
-                    <a class="nav2" href="about.html">About Us</a>
-                    <a class="nav3" href="contacts.html">Connect</a>
+                    <a class="nav2" href="aboutus.html">About Us</a>
+                    <a class="nav3" href="contactus.html">Connect</a>
                     <!-- adding names of potential pages to match the mock up -->
                     <a class="nav4" href="#">Products</a>
                     <a class="nav5" href="#">New Events</a>
