--- a/contactus.html
+++ b/contactus.html
@@ -23,7 +23,7 @@
             <nav class="site-language">
                 <ul>
                     <li>
-                        <a href="contacts.html" class="border-right">En</a>
+                        <a href="contactus.html" class="border-right">En</a>
                         <a href="#">Fr</a>
                     </li>
                 </ul>
