--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="main-text">
                 <h2>Background</h2>
                 <p class="background">
-                    Aman started his Aman Summer business in her home three years ago when she went on maternity
+                    Aman started his Aman Summer business in her home three years ago when he went on maternity
                     leave. Grew from catering to friends and family to craft sales and community events. Through word of
                     mouth he became more popular but still just catering for events such as birthdays and weddings on
                     weekends mostly.
